--- a/content/landing.mdx
+++ b/content/landing.mdx
@@ -2,7 +2,7 @@
 📍 wi | 🏫 [@uwmadison](https://wisc.edu) '27 | 🎓 [mbhs](https://mbhs.edu) '23
 
 ### I'm a maker, designer, and student.
-CS & tech has been a passion of mine since grade school. My work is mostly in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">3D printing</span>. I'm a rising freshman at UW-Madison with an intended major of CS.
+CS & tech has been a passion of mine since grade school! My work so far has mostly been in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">game design</span>. I'm a rising freshman at UW-Madison with an intended major of CS.
 
 ### Wanna chat?
 <Socials/>
