Update landing, photo, styling

--- a/content/landing.mdx
+++ b/content/landing.mdx
@@ -1,8 +1,24 @@
 ## Hi! I'm Linkai.
-📍 wi | 🏫 [@uwmadison](https://wisc.edu) '27 | 🎓 [mbhs](https://mbhs.edu) '23
+📍 md & wi | 🏫 [@uwmadison](https://wisc.edu) '27 | 🎓 [mbhs](https://mbhs.edu) '23
 
-### I'm a maker, designer, and student.
-CS & tech has been a passion of mine since grade school! My work so far has mostly been in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">game design</span>. I'm a rising freshman at UW-Madison with an intended major of CS.
+I'm a maker, programmer, and student! My work so far has mostly been in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">game design</span>. I'm also currently a CS student at the University of Wisconsin.
+
+### Active projects
+- [STEM to the Sky's website](https://stemtothesky.org) — a website I made for an organization that showcases careers in STEM through interviews with professionals
+- [Hack Club Jams](https://jams.hackclub.com) — a directory of collaborative coding workshops for [Hack Club](https://hackclub.com)
+
+### Dormant projects
+- [ORACLE of Blair](https://polistat-site-2022.vercel.app) — a project by my HS political statistics class that modeled the 2022 US Senate and governor elections
+- [Wordle Archive](https://wordle.linkaiwu.com) — a clone of NYT's Wordle game with an archive of past puzzles
+- [Jamcave](https://jamcave.linkaiwu.com) — a "multiplayer" whiteboard app, like Google Jamboard
+- [Bongo Cat](https://bongocat.linkaiwu.com) — a web app that lets you play instruments as a band of bongo cats!
+
+### Articles
+- [Build your own 3D club village](https://jams.hackclub.com/jam/3d-club-village) — a workshop on 3D modeling where you'll build your very own 3D island!
+
+*(I'm trying to do more writing, so I'll be adding more articles here soon!)*
 
 ### Wanna chat?
 <Socials/>
+
+Thanks for visiting my site! See you around 👋
