--- a/content/landing.mdx
+++ b/content/landing.mdx
@@ -1,10 +1,10 @@
 ## Hi! I'm Linkai.
 📍 md & wi | 🏫 [@uwmadison](https://wisc.edu) '27 | 🎓 [mbhs](https://mbhs.edu) '23
 
-I'm a maker, programmer, and student! My work so far has mostly been in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">game design</span>. I'm also currently a CS student at the University of Wisconsin.
+I'm a maker, programmer, and student! My work so far has mostly been in <span className="text-theme-primaryVariant font-medium">fullstack web dev</span>, but I'm currently exploring <span className="text-theme-primaryVariant font-medium">3D modeling</span> and <span className="text-theme-primaryVariant font-medium">game design</span>. I'm also currently a CS student at UW-Madison.
 
 ### Active projects
-- [STEM to the Sky's website](https://stemtothesky.org) — a website I made for an organization that showcases careers in STEM through interviews with professionals
+- [STEM to the Sky](https://stemtothesky.org) — a website I made for an organization that showcases careers in STEM through interviews with professionals
 - [Hack Club Jams](https://jams.hackclub.com) — a directory of collaborative coding workshops for [Hack Club](https://hackclub.com)
 
 ### Dormant projects
@@ -12,11 +12,11 @@ I'm a maker, programmer, and student! My work so far has mostly been in <span cl
 - [Wordle Archive](https://wordle.linkaiwu.com) — a clone of NYT's Wordle game with an archive of past puzzles
 - [Jamcave](https://jamcave.linkaiwu.com) — a "multiplayer" whiteboard app, like Google Jamboard
 - [Bongo Cat](https://bongocat.linkaiwu.com) — a web app that lets you play instruments as a band of bongo cats!
+- [Rythm Clone](https://github.com/linkai101/mhtyr) — a clone of the once-popular Discord bot Rythm
+- [101bot](https://github.com/linkai101/101bot) — a deprecated Discord bot with music, levels, and economy features
 
 ### Articles
 - [Build your own 3D club village](https://jams.hackclub.com/jam/3d-club-village) — a workshop on 3D modeling where you'll build your very own 3D island!
-
-*(I'm trying to do more writing, so I'll be adding more articles here soon!)*
 
 ### Wanna chat?
 <Socials/>
